Sat Oct  8 18:56:37 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_parser_malloc, rb_parser_free): manage parser stack on
	  heap.  [ruby-list:41199]

Thu Dec 25 04:00:44 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.8.1 released.

Thu Dec 25 00:17:53 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* configure.in: check for nanosleep, -lrt if required.
	  [ruby-core:02059]

	* eval.c (thread_timer): use select(2) if nanosleep(2) is not
	  available.

	* eval.c: check __stub_getcontext for glibc on some platforms.
	  [ruby-list:38984]

Wed Dec 24 23:48:04 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/soap/test_basetype.rb, test/soap/marshal/test_marshal.rb
	  test/xsd/test_xsd.rb: use "(-1.0 / (1.0 / 0.0))" instead of "-0.0"
	  to express -0.0.  [ruby-talk:88786]

Wed Dec 24 23:29:30 2003  Tanaka Akira  <akr@m17n.org>

	* lib/tsort.rb (test_orphaned_break): removed.

Wed Dec 24 20:53:06 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/sample/tkmulticolumnlist.rb: new sample

	* ext/tk/sample/tkmultilistframe.rb: bug fix

Wed Dec 24 20:37:37 2003  Eric Sunshine  <sunshine@sunshineco.com>

	* configure.in (LDSHARED): Fixed typographical error in assignment of
	  LDSHARED for Rhapsody which caused linking of extension modules to
	  fail.

Wed Dec 24 17:51:18 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_thread_flock): enable thread support again.

Wed Dec 24 16:46:08 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (catch_timer): do not call rb_thread_schedule() inside to
	  avoid pthread_mutex_lock() deadlock.  interrupts to system calls
	  are detected by TRAP_END via EINTR error.

	* eval.c (thread_timer): do not post signal unless it is
	  absolutely necessary.

	* rubysig.h (TRAP_END): add CHECK_INTS to switch thread.

	* regex.c (re_compile_pattern): check if nextp is smaller than
	  pend.  [ruby-dev:22372]

	* eval.c (umethod_bind): remove method overridden check.